Add CSS for home page: Tablet/Desktop View
When greater than 1024px, media queries unset the grid display, hide the menu button, and set the header to flex. The website's links are also held in a flex container. The cart continues to hang to the right with the use of absolute positioning.

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -10,6 +10,7 @@
   object-fit: cover;
   z-index: 1;
   position: absolute;
+  object-position: bottom;
 }
 
 .landing-splash .slogan {
@@ -26,15 +27,18 @@
 .landing-splash .shop-now {
   z-index: 2;
   position: absolute;
-  bottom: 10%;
+  bottom: 25%;
   left: 25%;
   right: 25%;
   border: none;
   background-color: rgb(204, 26, 26);
   box-shadow: 0px 3px 7px 0px #000000;
   border-radius: 5px;
-  padding: 10px;
+  padding: 9px;
   text-align: center;
+  display: block;
+  width: 192px;
+  margin: 0 auto;
 }
 
 .shop-now a {
