--- a/src/css/CategoryBanner.css
+++ b/src/css/CategoryBanner.css
@@ -1,5 +1,6 @@
 .category .banner {
-  height: 256px;
+  height: 30vw;
+  max-height: 300px;
   object-position: center;
   background-size: cover;
   background-position-y: 50%;
@@ -23,7 +24,8 @@
   margin: 0 auto;
   font-size: 200%;
   font-variant-caps: all-small-caps;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid rgb(140, 140, 140);
+  color: rgb(66, 66, 66);
 }
 
 .products {
@@ -49,7 +51,8 @@
 .product-info {
   display: grid;
   grid-template-rows: 70% 15% 15%;
-  height: 100%;
+  height: 90%;
+  row-gap: 15px;
 }
 
 
