--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -10,7 +10,7 @@
   object-fit: cover;
   z-index: 1;
   position: absolute;
-  object-position: bottom;
+  object-position: 50% 0%;
 }
 
 .landing-splash .slogan {
@@ -20,6 +20,7 @@
   text-align: center;
   width: 100vw;
   color: rgb(255, 255, 255);
+  text-shadow: 1px 2px 3px black;
   font-size: 150%;
   font-weight: 400;
 }
@@ -103,7 +104,7 @@
   padding-bottom: 25px;
   line-height: 145%;
   text-align: center;
-  font-size: 100%;
+  font-size: 110%;
 }
 
 .mailing-list {
