--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,7 +7,6 @@ body {
   font-family: "Abel", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(248,248,248);
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -23,6 +22,7 @@ button {
   padding: 10px;
   text-align: center;
   color: white;
+  cursor: pointer;
 }
 
 a {
