--- a/src/css/index.css
+++ b/src/css/index.css
@@ -17,12 +17,16 @@ button {
   all: unset;
   border: none;
   background-color: rgb(204, 26, 26);
-  box-shadow: 0px 3px 7px 0px #000000;
+  box-shadow: 0px 3px 7px 1px #0000004d;
   border-radius: 5px;
   padding: 10px;
   text-align: center;
   color: white;
   cursor: pointer;
+}
+
+button:disabled {
+  background-color: rgb(121, 121, 121);
 }
 
 a {
